--- a/ontology/OntoRefine_mapping.json
+++ b/ontology/OntoRefine_mapping.json
@@ -1,8 +1,5 @@
-###NV: import this into OntoRefine to get a proper view of the mapping. 
-# mappings mostly use terms from DarwinCore, geostuff is still unfinished
-
 {
-  "baseIRI": "",
+  "baseIRI": "http://example.com/base/",
   "namespaces": {
     "ex": "http://example.org/",
     "geo": "http://www.opengis.net/ont/geosparql#",
@@ -228,6 +225,72 @@
               }
             }
           ]
+        },
+        {
+          "property": {
+            "transformation": {
+              "expression": "dwc",
+              "language": "prefix"
+            },
+            "valueSource": {
+              "source": "constant",
+              "constant": "decimalLatitude"
+            }
+          },
+          "values": [
+            {
+              "valueSource": {
+                "columnName": "latitude",
+                "source": "column"
+              },
+              "valueType": {
+                "type": "datatype_literal",
+                "datatype": {
+                  "transformation": {
+                    "expression": "xsd",
+                    "language": "prefix"
+                  },
+                  "valueSource": {
+                    "source": "constant",
+                    "constant": "float"
+                  }
+                }
+              }
+            }
+          ]
+        },
+        {
+          "property": {
+            "transformation": {
+              "expression": "dwc",
+              "language": "prefix"
+            },
+            "valueSource": {
+              "source": "constant",
+              "constant": "decimalLongitude"
+            }
+          },
+          "values": [
+            {
+              "valueSource": {
+                "columnName": "longitude",
+                "source": "column"
+              },
+              "valueType": {
+                "type": "datatype_literal",
+                "datatype": {
+                  "transformation": {
+                    "expression": "xsd",
+                    "language": "prefix"
+                  },
+                  "valueSource": {
+                    "source": "constant",
+                    "constant": "float"
+                  }
+                }
+              }
+            }
+          ]
         }
       ],
       "subject": {
@@ -239,7 +302,18 @@
           "source": "column"
         }
       },
-      "typeMappings": []
+      "typeMappings": [
+        {
+          "transformation": {
+            "expression": "dwc",
+            "language": "prefix"
+          },
+          "valueSource": {
+            "source": "constant",
+            "constant": "Occurrence"
+          }
+        }
+      ]
     }
   ]
 }
