--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/observations.ttl filter=lfs diff=lfs merge=lfs -text
 data/geonames/geonames.ttl filter=lfs diff=lfs merge=lfs -text
+ontology/primate_taxonomy.owl filter=lfs diff=lfs merge=lfs -text
